[gd_scene load_steps=2 format=2]

[ext_resource path="res://ToolButtons/BrushSizeTextEdit.gd" type="Script" id=1]

[node name="BrushSizeTextEdit" type="LineEdit"]
margin_left = 54.0
margin_right = 112.0
margin_bottom = 24.0
rect_min_size = Vector2( 20, 20 )
text = "1"
align = 1
max_length = 2
context_menu_enabled = false
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="."]
anchor_top = 1.3
anchor_bottom = 1.3
margin_top = 14.9893
margin_right = 200.0
margin_bottom = 30.9893
rect_min_size = Vector2( 200, 0 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="." method="_on_BrushSizeTextEdit_gui_input"]
[connection signal="text_changed" from="." to="." method="_on_BrushSizeTextEdit_text_changed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
